[package]
name = "html-json-extract"
version = "0.1.1"
edition = "2024"
authors = ["18834169694@163.com"]
description = "A package for parse some data from html.scripts"
license = "MIT OR Apache-2.0"  # 常见的双许可方式
categories = ["data-structures"]

[lib]
path = "src/lib.rs"


[dependencies]
boa_engine = "0.20.0"
scraper = "0.16"
serde_json = "1.0.140"
serde_merge = "0.1.0"  # 用于合并 JSON 对象
regex = "1.0"
anyhow = "1.0.98"
